--- a/DSML_59_DZ_3.ipynb
+++ b/DSML_59_DZ_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNd4Pw/sbMKcFLNQXlGP66D",
+      "authorship_tag": "ABX9TyP+ydb08BNX5KuKbqkajuOt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2456,7 +2456,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "ROC Curves (синяя кривая  и оранжевые точки) «поднимаются» к левому верху — чем круче, тем лучше модель."
+        "ROC-кривые (синяя кривая  и оранжевые точки) «поднимаются» к левому верху — чем круче, тем лучше модель."
       ],
       "metadata": {
         "id": "uLdDcJpXi0kT"
